2011-12-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: hack to support autoconf-wrapper programs
	* tests/defs-static.in ($AUTOCONF): Add a dummy `-B' option to the
	autoconf invocation, so that, when the Debian autoconf wrapper is
	involved, it will correctly dispatch an autoconf >= 2.50 instead of
	defaulting to autoconf 2.13.
	($AUTOHEADER, $AUTORECONF): Likewise, but for autoheader and
	autoreconf respectively.
	Reported by Bruno Haible:
	<http://lists.gnu.org/archive/html/automake/2011-12/msg00039.html>

2011-12-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix a minor spurious failure with FreeBSD make
	* tests/remake-am-pr10111.test: Avoid using `#' comments in
	makefile recipes, as these have been confusing FreeBSD make.
	The failure was masked by the fact that this test is currently
	expected to fail.
	Suggested by a report from Bruno Haible.

2011-12-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: make two test scripts executable
	* tests/remake-am-pr10111.test: Make executable.
	* tests/remake-m4-pr10111.test: Likewise.

2011-12-14  Stefano Lattarini  <stefano.lattarini@gmail.com>

	readme: reference webpages for automake mailing lists
	* README: Rationalize and reorganize the (brief) description of
	the automake mailing lists.   In particular, instead of suggesting
	the reader to write to the `-request' addresses to subscribe to
	mailing lists, point him to the relevant webpages, where he can
	also subscribe via a web form.

2011-12-14  Stefano Lattarini  <stefano.lattarini@gmail.com>

	readme: update advice about testsuite execution
	* README: Now that the automake testsuite uses the parallel-tests
	driver, there is no need for the user to capture the stdout of
	"make check" to determine which tests have failed: a detailed log
	is automatically saved into the `tests/test-suite.log' file.
	Since we are at it, improve the wording by dropping an extra
	"please".
