@@ -47,9 +47,9 @@ installcheck-local: test
 .PHONY: test
 test:
 	(cd '$(prefix)' && find .);: For debugging.
-	ls -l '$(libdir)/foo'
-	test -f '$(libdir)/foo'
-	test -x '$(libdir)/foo'
+	ls -l '$(libdir)/foo$(EXEEXT)'
+	test -f '$(libdir)/foo$(EXEEXT)'
+	test -x '$(libdir)/foo$(EXEEXT)'
 	ls -l '$(bindir)/libquux.a'
 	test -f '$(bindir)/libquux.a'
 	ls -l '$(libexecdir)/bar.h'
