@@ -1,3 +1,9 @@
+2011-12-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix spurious failure on MSYS/MinGW and Cygwin
+	* tests/primary-prefix-couples-force-valid.test (Makefile.am):
+	Correctly append $(EXEEXT) to the path of built binaries.
+
 2011-12-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	test defs: hack to support autoconf-wrapper programs
